--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
     "lodash": "^4.17.20",
+    "lottie-react-native": "~2.6.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
