--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.0.0",
+    "@react-native-community/image-editor": "^2.3.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
@@ -16,7 +17,7 @@
     "expo": "~38.0.8",
     "expo-image-picker": "~8.3.0",
     "expo-media-library": "~8.2.1",
-    "expo-permissions": "~9.0.1",
+    "expo-permissions": "^9.1.0",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
     "lodash": "^4.17.20",
@@ -26,8 +27,10 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
+    "react-native-redash": "^14.2.4",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-simple-image-cropper": "^3.1.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
