--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
+    "expo-blur": "~8.1.2",
     "expo-image-picker": "~8.3.0",
     "expo-media-library": "~8.2.1",
     "expo-permissions": "^9.1.0",
@@ -25,11 +26,13 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modalbox": "^2.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-redash": "^14.2.4",
     "react-native-safe-area-context": "~3.0.7",
+    "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~2.9.0",
     "react-native-simple-image-cropper": "^3.1.0",
     "react-native-web": "~0.11.7"
